<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zeeshanjaved.fyp_app.RegisteredTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textreaddescription"
        android:text="@string/textreaddiscription"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription1"
        android:id="@+id/textreaddescription1"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription2"
        android:id="@+id/textreaddescription2"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription3"
        android:id="@+id/textreaddescription3"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription4"
        android:id="@+id/textreaddescription4"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription5"
        android:id="@+id/textreaddescription5"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textreaddescription6"
        android:id="@+id/textreaddescription6"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnnext"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btncolor"
        android:textColor="@color/btntextcolor"
        android:text="Next"/>



</LinearLayout>
