<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zeeshanjaved.fyp_app.TrialtestShowResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textheadingresult"
        android:text="@string/textheadingresult"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/totalquestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/texttotalquestion"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalquestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textColor="@color/correctanscolor"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/attemptquestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/textattemptedques"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/attemptquestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textColor="@color/correctanscolor"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/correctques1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/textcorrectques"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/correctques2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textColor="@color/correctanscolor"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/incorrectques1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/textIncorrectAns"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/incorrectques2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textColor="@color/incorrectanscolor"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
