<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zeeshanjaved.fyp_app.ResultOfRegTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textresult"
            android:text="@string/textresult"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/totalquestion11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/texttotalquestion"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalquestion22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/attemptquestion11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/textattemptedques"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/attemptquestion22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/correctques11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/textcorrectques"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/correctques22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:textColor="@color/correctanscolor"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/incorrectques11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/textIncorrectAns"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/incorrectques22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:textColor="@color/incorrectanscolor"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listofresult"
            android:layout_margin="10dp">

        </ListView>

    </LinearLayout>

