<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeeshanjaved.fyp_app.AboutUsActivity">

    <ScrollView
        android:id="@+id/scrollaboutus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:capitalize="sentences"
                android:lineSpacingExtra="2sp"
                android:text="@string/text_aboutus"
                android:textSize="15sp"

                />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/textwhycodetester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Why Code Testers?"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textwhycodetesterbelow"
                android:text="Outstanding Online Quiz System"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textoutstandingdetails"
                android:text="@string/text_outstandingonlinequizdetails"
                android:textSize="15sp"
                android:lineSpacingExtra="2sp"
                android:capitalize="sentences"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textskillenhanceing"
                android:text="Skill Enhancing Quizes"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textskillenhancedetail"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/text_skillenhancedetails"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
