<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollviewforcss">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textquestiondetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="What is Question?"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:background="#282531" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="vertical"
            android:weightSum="60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoptionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/optiontextcolor"
                    android:text="@string/text_optionA"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textanswerA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoptionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/optiontextcolor"
                    android:clickable="true"
                    android:text="@string/text_optionB"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textanswerB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoptionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/optiontextcolor"
                    android:clickable="true"
                    android:text="@string/text_optionC"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textanswerC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoptionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/optiontextcolor"
                    android:clickable="true"
                    android:text="@string/text_optionD"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textanswerD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textcorrectans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Correct Ans!"
                    android:textColor="@color/correctanscolor"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textcorrectans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/correctanscolor"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textansexplanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/correctanscolor"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/textwrongans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="This is Incorrect!"
                    android:textColor="@color/incorrectanscolor"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="80"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/btnnext"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/btnnext"
                android:background="@drawable/my_button_bg"
                android:textAllCaps="false" />

            <ImageButton
                android:id="@+id/imganskey"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="50"
                android:src="@drawable/forgotpass" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
